<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright (C) 2012,2013 Sweetie Piggy Apps <sweetiepiggyapps@gmail.com>

    This file is part of Raspberry Bus Malaysia.

    Raspberry Bus Malaysia is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation; either version 3 of the License, or
    (at your option) any later version.

    Raspberry Bus Malaysia is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Raspberry Bus Malaysia ; if not, see <http://www.gnu.org/licenses/>.
-->

<resources>

	<string name="app_name">Raspberry Bus M\'sia</string>

	<string name="about">About</string>
	<string name="view_source">View Source</string>

	<string name="from">From</string>
	<string name="to">To</string>
	<string name="route">Routes</string>
	<string name="submit">submit</string>
	<string name="clear">clear</string>
	<string name="agent">Agent</string>
	<string name="avg_time">Average\nTime</string>
	<string name="avg_delay">Average\nDelay</string>
	<string name="num_trips">Trips</string>
	<string name="now">Now</string>

	<string name="sched_time">Departure Time on Ticket</string>
	<string name="depart_time">Actual Departure Time</string>
	<string name="arrival_time">Arrival Time</string>

	<string name="confirm_submit">Confirm</string>

	<string name="agent_hint">Enter counter name, e.g. United Travel</string>
	<string name="operator">Operator</string>
	<string name="operator_hint">Enter bus brand, e.g. Seasons</string>

	<string name="from_city_hint">Enter city of departure, e.g. Kuala Lumpur</string>
	<string name="from_station_hint">Enter station of departure, e.g. Puduraya</string>

	<string name="to_city_hint">Enter city of arrival, e.g. Penang</string>
	<string name="to_station_hint">Enter station of arrival, e.g. Sg Nibong</string>

	<string name="counter_num">Counter Number</string>
	<string name="counter_num_hint">Enter counter number, e.g. 10</string>

	<string name="comment">Review</string>
	<string name="comment_hint">Enter comments about your trip</string>

	<string name="overall">Overall</string>
	<string name="safety">Safety</string>
	<string name="comfort">Comfort</string>

	<string name="route_stat">routes</string>
	<string name="agent_stat">agents</string>
	<string name="operator_stat">operators</string>
	<string name="submit_trip">review</string>
	<string name="reviews">review(s)</string>
	<string name="complain">complain</string>

	<string name="submit_trip_success">Successfully submitted review</string>

	<string name="sync">Sync</string>
	<string name="syncing">Syncing...</string>
	<string name="updates_found">update(s) found</string>

	<string name="missing_from_city">Enter departure city</string>
	<string name="missing_to_city">Enter destination city</string>
	<string name="depart_before_arrival">Arrival Time must be later than Departure Time</string>
	<string name="future_arrival">Arrival time cannot be in the future</string>
	<string name="future_departure">Departure time cannot be in the future</string>
	<string name="future_scheduled">Scheduled time cannot be in the future</string>

	<string name="search_hint">Search agents</string>

	<string name="delay">Delay</string>
	<string name="trip_time">Trip Time</string>

	<string name="send_youtube">Upload to YouTube</string>
	<string name="send_tweet">Send tweet</string>
	<string name="send_email">Send email</string>

	<string name="minute_abbr">min</string>
	<string name="hour_abbr">hr</string>

	<string name="unknown">(Unknown)</string>
	<string name="unknown_host">Unable to connect to internet</string>
	<string name="file_not_found">File not found</string>

	<string name="monday">Monday</string>
	<string name="tuesday">Tuesday</string>
	<string name="wednesday">Wednesday</string>
	<string name="thursday">Thursday</string>
	<string name="friday">Friday</string>
	<string name="saturday">Saturday</string>
	<string name="sunday">Sunday</string>

	<string name="map">map</string>

	<string name="lang_code">en</string>

	<string name="offence">Nature of Offence</string>
	<string name="registration">Registration Number of Bus</string>
	<string name="registration_hint">Enter plate number, e.g. WAB1234</string>

	<string name="record">Record</string>
	<string name="take_photo">Take photo</string>
	<string name="record_video">Record video</string>
	<string name="record_sound">Record audio</string>

	<string name="select_submit">Select Method</string>
	<string name="sms">sms</string>
	<string name="tweet">tweet</string>
	<string name="email">email</string>
	<string name="youtube">youtube</string>

	<string name="email_intro">
To Whom It May Concern:\n\n
I\'m writing this email to inform you of an unpleasant incident which I
experienced recently. The details are below. Please take appropriate action
regarding my complaint.\n\n
Thank you.\n
	</string>
	<string name="email_reg">Registration Number of Bus</string>
	<string name="email_from">From</string>
	<string name="email_to">To</string>
	<string name="email_agent">Agent</string>
	<string name="email_counter">Counter Number</string>
	<string name="email_operator">Operator</string>
	<string name="email_offence">Nature of Offence</string>

	<string name="who_email">Select who to email</string>
	<string name="who_details">Details</string>
	<string-array name="email_choices">
		<item>SPAD</item>
		<item>Other Government Departments</item>
		<item>Consumer Groups</item>
		<item>Government Ministers</item>
		<item>News Media</item>
		<item>Traffic Police</item>
	</string-array>
	<string name="email_details">
SPAD: Land Public Transport Commission\n\n
Government Departments: JPJ, KPDNKK, Ministry of Tourism, PEMUDAH, Public Complaints Bureau\n\n
Consumer Groups: TRANSIT, NCCC\n\n
Government Ministers: Minister of Transport, Minister of Tourism, Prime Minister\n\n
News Media: The Star, Star Metro, Malay Mail, New Straits Times, New Straits Times Streets, The Sun, Malaysia Kini, The Malaysian Insider\n\n
Traffic Police: rmp@rmp.gov.my
	</string>

	<string name="license">
Copyright (C) 2012 Sweetie Piggy Apps sweetiepiggyapps@gmail.com\n\n
Raspberry Bus Malaysia is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation; either version 3 of the License, or
    (at your option) any later version.\n\n
Raspberry Bus Malaysia is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.\n\n
You should have received a copy of the GNU General Public License
    along with Raspberry Bus Malaysia; if not, see http://www.gnu.org/licenses/.\n\n
Raspberry Bus Malaysia contains information from the
    Raspberry Bus Malaysia Database, which is made available here under
    the Open Database License (ODbL) v1.0, see
    http://opendatacommons.org/licenses/odbl/1.0/.
	</string>
</resources>
