<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright (C) 2012,2013 Sweetie Piggy Apps <sweetiepiggyapps@gmail.com>

    This file is part of Raspberry Bus Malaysia.

    Raspberry Bus Malaysia is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation; either version 3 of the License, or
    (at your option) any later version.

    Raspberry Bus Malaysia is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Raspberry Bus Malaysia ; if not, see <http://www.gnu.org/licenses/>.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:focusable="true"
		android:focusableInTouchMode="true"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<TextView
			android:id="@+id/sched_time_label"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			style="@style/Label"
			android:text="@string/sched_time" />
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<Button
				android:id="@+id/sched_date_button"
				style="@style/LeftButton"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent" />
			<Button
				android:id="@+id/sched_time_button"
				style="@style/RightButton"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"/>
		</LinearLayout>
		<View
			android:layout_width="fill_parent"
			android:layout_height="1dp"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:background="@android:color/darker_gray"/>

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >
			<TextView
				android:id="@+id/from_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				style="@style/Label"
				android:text="@string/from" />
			<Button
				android:id="@+id/from_map_button"
				style="@style/Button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:drawableLeft="@android:drawable/ic_dialog_map"
				android:text="@string/map" />
		</LinearLayout>
		<AutoCompleteTextView
			android:id="@+id/from_city_entry"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/from_city_hint" />
		<AutoCompleteTextView
			android:id="@+id/from_station_entry"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/from_station_hint" />

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >
			<TextView
				android:id="@+id/to_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				style="@style/Label"
				android:text="@string/to" />
			<Button
				android:id="@+id/to_map_button"
				style="@style/Button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:drawableLeft="@android:drawable/ic_dialog_map"
				android:text="@string/map" />
		</LinearLayout>
		<AutoCompleteTextView
			android:id="@+id/to_city_entry"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/to_city_hint" />
		<AutoCompleteTextView
			android:id="@+id/to_station_entry"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/to_station_hint" />
		<View
			android:layout_width="fill_parent"
			android:layout_height="1dp"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:background="@android:color/darker_gray"/>

		<TextView
			android:id="@+id/agent_label"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
				style="@style/Label"
			android:text="@string/agent" />
		<AutoCompleteTextView
			android:id="@+id/agent_entry"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/agent_hint" />

		<TextView
			android:id="@+id/counter_num_label"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			style="@style/Label"
			android:text="@string/counter_num" />
		<AutoCompleteTextView
			android:id="@+id/counter_num_entry"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/counter_num_hint" />

		<TextView
			android:id="@+id/operator_label"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			style="@style/Label"
			android:text="@string/operator" />
		<AutoCompleteTextView
			android:id="@+id/operator_entry"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/operator_hint" />

		<TextView
			android:id="@+id/registration_label"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			style="@style/Label"
			android:text="@string/registration" />
		<EditText
			android:id="@+id/reg_entry"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/registration_hint" />

		<TextView
			android:id="@+id/offence_label"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			style="@style/Label"
			android:text="@string/offence" />
		<EditText
			android:id="@+id/comment_entry"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/comment_hint" />

		<TextView
			android:id="@+id/record_label"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			style="@style/Label"
			android:text="@string/record" />

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView
				android:id="@+id/camera_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="" />
			<Button
				android:id="@+id/camera_button"
				style="@style/Button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@android:color/transparent"
				android:drawableLeft="@android:drawable/ic_menu_camera"/>
			<TextView
				android:id="@+id/video_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="" />
			<Button
				android:id="@+id/vidcam_button"
				style="@style/Button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@android:color/transparent"
				android:drawableLeft="@drawable/video_camera"/>
			<TextView
				android:id="@+id/recorder_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="" />
			<Button
				android:id="@+id/recorder_button"
				style="@style/Button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@android:color/transparent"
				android:drawableLeft="@android:drawable/ic_btn_speak_now"/>
		</LinearLayout>

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<Button
				android:id="@+id/submit_button"
				style="@style/LeftButton"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:drawableLeft="@android:drawable/ic_menu_send"
				android:text="@string/submit" />
			<Button
				android:id="@+id/cancel_button"
				style="@style/RightButton"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel"
				android:text="@string/clear" />
		</LinearLayout>

	</LinearLayout>
</ScrollView>

