<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright (C) 2012 Sweetie Piggy Apps <sweetiepiggyapps@gmail.com>

    This file is part of Raspberry Bus Malaysia.

    Raspberry Bus Malaysia is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation; either version 3 of the License, or
    (at your option) any later version.

    Raspberry Bus Malaysia is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Raspberry Bus Malaysia ; if not, see <http://www.gnu.org/licenses/>.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<TextView
			android:id="@+id/from_label"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			style="@android:style/TextAppearance.Large"
			android:text="@string/from" />
		<AutoCompleteTextView
			android:id="@+id/from_city_entry"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/from_city_hint"
			android:background="@android:drawable/editbox_background"/>
		<AutoCompleteTextView
			android:id="@+id/from_station_entry"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/from_station_hint"
			android:background="@android:drawable/editbox_background"/>
		<Button
			android:id="@+id/from_map_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:drawableLeft="@android:drawable/ic_dialog_map"
			android:text="@string/map" />

		<TextView
			android:id="@+id/to_label"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			style="@android:style/TextAppearance.Large"
			android:text="@string/to" />
		<AutoCompleteTextView
			android:id="@+id/to_city_entry"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/to_city_hint"
			android:background="@android:drawable/editbox_background"/>
		<AutoCompleteTextView
			android:id="@+id/to_station_entry"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/to_station_hint"
			android:background="@android:drawable/editbox_background"/>
		<Button
			android:id="@+id/to_map_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:drawableLeft="@android:drawable/ic_dialog_map"
			android:text="@string/map" />

		<TextView
			android:id="@+id/company_label"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			style="@android:style/TextAppearance.Large"
			android:text="@string/company" />
		<AutoCompleteTextView
			android:id="@+id/company_entry"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/company_hint"
			android:background="@android:drawable/editbox_background"/>

		<TextView
			android:id="@+id/counter_num_label"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			style="@android:style/TextAppearance.Large"
			android:text="@string/counter_num" />
		<AutoCompleteTextView
			android:id="@+id/counter_num_entry"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/counter_num_hint"
			android:background="@android:drawable/editbox_background"/>

		<TextView
			android:id="@+id/brand_label"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			style="@android:style/TextAppearance.Large"
			android:text="@string/brand" />
		<AutoCompleteTextView
			android:id="@+id/brand_entry"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/brand_hint"
			android:background="@android:drawable/editbox_background"/>

		<TextView
			android:id="@+id/sched_time_label"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			style="@android:style/TextAppearance.Large"
			android:text="@string/sched_time" />
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<Button
				android:id="@+id/sched_date_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"/>
			<Button
				android:id="@+id/sched_time_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
		</LinearLayout>

		<TextView
			android:id="@+id/depart_time_label"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			style="@android:style/TextAppearance.Large"
			android:text="@string/depart_time" />
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<Button
				android:id="@+id/depart_date_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"/>
			<Button
				android:id="@+id/depart_time_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
		</LinearLayout>

		<TextView
			android:id="@+id/arrival_time_label"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			style="@android:style/TextAppearance.Large"
			android:text="@string/arrival_time" />
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<Button
				android:id="@+id/arrival_date_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"/>
			<Button
				android:id="@+id/arrival_time_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
		</LinearLayout>

		<TextView
			android:id="@+id/safety_label"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			style="@android:style/TextAppearance.Large"
			android:text="@string/safety" />
		<RatingBar
			android:id="@+id/safety_bar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:numStars="5"
			android:rating="3"
			android:stepSize="1.0" />

		<TextView
			android:id="@+id/comfort_label"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			style="@android:style/TextAppearance.Large"
			android:text="@string/comfort" />
		<RatingBar
			android:id="@+id/comfort_bar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:numStars="5"
			android:rating="3"
			android:stepSize="1.0" />

		<TextView
			android:id="@+id/comment_label"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			style="@android:style/TextAppearance.Large"
			android:text="@string/comment" />
		<EditText
			android:id="@+id/comment_entry"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/comment_hint"
			android:background="@android:drawable/editbox_background"/>

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<Button
				android:id="@+id/submit_button"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:drawableLeft="@android:drawable/ic_menu_send"
				android:text="@string/submit" />
			<Button
				android:id="@+id/cancel_button"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel"
				android:text="@string/clear" />
		</LinearLayout>

	</LinearLayout>
</ScrollView>
