<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright (C) 2012 Sweetie Piggy Apps <sweetiepiggyapps@gmail.com>

    This file is part of Raspberry Bus Malaysia.

    Raspberry Bus Malaysia is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation; either version 3 of the License, or
    (at your option) any later version.

    Raspberry Bus Malaysia is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Raspberry Bus Malaysia ; if not, see <http://www.gnu.org/licenses/>.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<TextView
			android:id="@+id/from_label"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textStyle="bold"
			android:text="@string/from" />
		<Spinner
			android:id="@+id/from_spinner"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:drawSelectorOnTop="true"
			android:prompt="@string/from"/>
		<TextView
			android:id="@+id/to_label"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textStyle="bold"
			android:text="@string/to" />
		<Spinner
			android:id="@+id/to_spinner"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:drawSelectorOnTop="true"
			android:prompt="@string/to"/>

		<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
		<RadioButton android:id="@+id/company_radio"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/company"
			android:onClick="on_radio_button_clicked"/>
		<RadioButton android:id="@+id/bus_brand_radio"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/brand"
			android:onClick="on_radio_button_clicked"/>
		</RadioGroup>

		<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/results_layout"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:stretchColumns="1" >
			<TableRow>
				<Button
					android:id="@+id/company"
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:textStyle="bold"
					android:text="@string/company"/>
				<Button
					android:id="@+id/avg_time"
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:textStyle="bold"
					android:text="@string/avg_time"/>
				<Button
					android:id="@+id/avg_delay"
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:textStyle="bold"
					android:text="@string/avg_delay"/>
				<Button
					android:id="@+id/num_trips"
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:textStyle="bold"
					android:text="@string/num_trips"/>
			</TableRow>
		</TableLayout>

	</LinearLayout>
</ScrollView>
